# otclient

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CMakePresets.json.rej  CMakeSettings.json  DELETE THIS.md  Dockerfile  Dockerfile.browser  Dockerfile.browser.sh  ISSUE_TEMPLATE.md  Makefile  README.md  config.ini  init.lua  meta.lua  otclientrc.lua  sonar-project.properties  vcpkg-configuration.json  vcpkg.json
src/: CMakeLists.txt  androidmain.cpp  gameconfig.h  gitinfo.h  main.cpp
src/android/: android_native_app_glue.cpp  dependencies.cpp  pch.h
src/android/game-activity/: GameActivity.cpp  GameActivity.h  GameActivityEvents.cpp  GameActivityEvents.h  GameActivityLog.h
src/android/game-text-input/: gametextinput.cpp  gametextinput.h
src/android/swappy/: OWNERS  swappyGL.h  swappyGL_extra.h
src/android/tuningfork/: tuningfork.h  tuningfork_extra.h  unity_tuningfork.h
src/client/: CMakeLists.txt  animatedtext.cpp  animatedtext.h  animator.cpp  animator.h  attachableobject.cpp  attachableobject.h  attachedeffect.cpp  attachedeffect.h  attachedeffectmanager.cpp  attachedeffectmanager.h  client.cpp  client.h  clientluafunctions.cpp  clientluavaluecasts.cpp  config.h  const.h  container.cpp  container.h  creature.cpp  creature.h  creatures.cpp  creatures.h  declarations.h  discord.cpp  discord.h  effect.cpp  effect.h  game.cpp  game.h  gameconfig.cpp  gameconfig.h  global.h  houses.cpp  houses.h  item.cpp  item.h  itemtype.cpp  itemtype.h  lightview.cpp  (+76 more)
src/client/protobuf/: appearances.pb.cc  appearances.pb.h  shared.pb.cc  shared.pb.h
src/client/protocols/: protocolcodes.h  protocolgame.cpp  protocolgame.h  protocolgameparse.cpp  protocolgamesend.cpp  protocollogin.cpp  protocollogin.h
src/framework/: CMakeLists.txt  config.h  const.h  global.h  luafunctions.cpp  pch.cpp  pch.h
src/framework/core/: adaptativeframecounter.cpp  adaptativeframecounter.h  application.cpp  application.h  asyncdispatcher.cpp  asyncdispatcher.h  binarytree.cpp  binarytree.h  clock.cpp  clock.h  config.cpp  config.h  configmanager.cpp  configmanager.h  consoleapplication.cpp  consoleapplication.h  declarations.h  event.cpp  event.h  eventdispatcher.cpp  eventdispatcher.h  filestream.cpp  filestream.h  garbagecollection.cpp  garbagecollection.h  graphicalapplication.cpp  graphicalapplication.h  inputevent.h  logger.cpp  logger.h  module.cpp  module.h  modulemanager.cpp  modulemanager.h  resourcemanager.cpp  resourcemanager.h  scheduledevent.cpp  scheduledevent.h  timer.cpp  timer.h  (+2 more)
src/framework/discord/: discord.cpp  discord.h
src/framework/graphics/: animatedtexture.cpp  animatedtexture.h  apng_png.hpp  apngloader.cpp  apngloader.h  atlas.cpp  atlas.h  bitmapfont.cpp  bitmapfont.h  bitmapfontwrapoptions.h  cachedtext.cpp  cachedtext.h  colorarray.h  coordsbuffer.cpp  coordsbuffer.h  declarations.h  deptharray.h  drawcache.cpp  drawcache.h  drawpool.cpp  drawpool.h  drawpoolmanager.cpp  drawpoolmanager.h  drawqueue.cpp  drawqueue.h  fontmanager.cpp  fontmanager.h  framebuffer.cpp  framebuffer.h  framebuffermanager.cpp  framebuffermanager.h  glutil.h  graphics.cpp  graphics.h  hardwarebuffer.cpp  hardwarebuffer.h  image.cpp  image.h  painter.cpp  painter.h  (+35 more)
src/framework/html/: cssparser.cpp  cssparser.h  declarations.h  htmlmanager.cpp  htmlmanager.h  htmlnode.cpp  htmlnode.h  htmlparser.cpp  htmlparser.h  queryselector.cpp  queryselector.h
src/framework/ini/: declarations.h  ini.h  inidocument.cpp  inidocument.h
src/framework/input/: mouse.cpp  mouse.h
src/framework/luaengine/: declarations.h  lbitlib.cpp  lbitlib.h  luabinder.h  luaexception.cpp  luaexception.h  luainterface.cpp  luainterface.h  luaobject.cpp  luaobject.h  luavaluecasts.cpp  luavaluecasts.h
src/framework/net/: connection.cpp  connection.h  declarations.h  httplogin.cpp  httplogin.h  inputmessage.cpp  inputmessage.h  outputmessage.cpp  outputmessage.h  packet_player.cpp  packet_player.h  packet_recorder.cpp  packet_recorder.h  protocol.cpp  protocol.h  protocol_flat_parsers.cpp  protocol_parsers.cpp  protocolhttp.cpp  protocolhttp.h  server.cpp  server.h  webconnection.cpp  webconnection.h
src/framework/otml/: declarations.h  otml.h  otmldocument.cpp  otmldocument.h  otmlemitter.cpp  otmlemitter.h  otmlexception.cpp  otmlexception.h  otmlnode.cpp  otmlnode.h  otmlparser.cpp  otmlparser.h
src/framework/platform/: androidgameactivity.cpp  androidmanager.cpp  androidmanager.h  androidplatform.cpp  androidwindow.cpp  androidwindow.h  browserplatform.cpp  browserwindow.cpp  browserwindow.h  cocoaview.h  cocoaview.mm  cocoawindow.h  cocoawindow.mm  const.h  crashhandler.h  platform.cpp  platform.h  platformwindow.cpp  platformwindow.h  sdlwindow.cpp  sdlwindow.h  staticdata.h  unixcrashhandler.cpp  unixplatform.cpp  win32crashhandler.cpp  win32platform.cpp  win32window.cpp  win32window.h  x11window.cpp  x11window.h
src/framework/protobuf/: appearances.pb.cc  appearances.pb.h  shared.pb.cc  shared.pb.h
src/framework/proxy/: proxy.cpp  proxy.h  proxy_client.cpp  proxy_client.h
src/framework/sound/: combinedsoundsource.cpp  combinedsoundsource.h  declarations.h  oggsoundfile.cpp  oggsoundfile.h  soundbuffer.cpp  soundbuffer.h  soundchannel.cpp  soundchannel.h  soundeffect.cpp  soundeffect.h  soundfile.cpp  soundfile.h  soundmanager.cpp  soundmanager.h  soundsource.cpp  soundsource.h  streamsoundsource.cpp  streamsoundsource.h
src/framework/sql/: database.h  declarations.h  mysql.cpp  mysql.h
src/framework/stdext/: cast.h  compiler.h  demangle.cpp  demangle.h  dumper.h  exception.h  format.h  hash.h  math.cpp  math.h  net.cpp  net.h  packed_any.h  packed_storage.h  qrcodegen.cpp  qrcodegen.h  shared_object.h  shared_ptr.h  stdext.h  (+10 more)
src/protobuf/: CMakeLists.txt  appearances.pb.cc  appearances.pb.h  appearances.proto  generate.bat  generate.sh  sounds.proto  staticdata.proto
src/tools/: datdump.cpp  datdump.h
tests/: CMakeLists.txt
tests/map/: CMakeLists.txt  map_spectators_test.cpp
tests/stdext/: CMakeLists.txt  string_encoding_test.cpp
(+1198 files in other folders)
